--- a/non-root-nginx/Dockerfile
+++ b/non-root-nginx/Dockerfile
@@ -1,19 +1,20 @@
 # Use official NGINX base image
 FROM nginx:latest
 
-# Create a non-root user with UID 1000
+# Create a non-root user
 RUN useradd -u 1000 appuser \
-    && mkdir -p /home/appuser /tmp/nginx \
-    && chown -R appuser:appuser /home/appuser /var/cache/nginx /var/log/nginx /tmp/nginx
+    && mkdir -p /home/appuser/nginx /tmp/nginx \
+    && chown -R appuser:appuser /home/appuser /var/cache/nginx /var/log/nginx /tmp/nginx \
+    && rm -f /etc/nginx/conf.d/default.conf  # Remove default config
 
-# Copy the custom NGINX configuration
-COPY nginx.conf /etc/nginx/nginx.conf
+# Copy the custom NGINX configuration to a writable directory
+COPY nginx.conf /home/appuser/nginx/nginx.conf
 
 # Switch to non-root user
 USER appuser
 
-# Expose the default NGINX port
+# Expose the correct port
 EXPOSE 8080
 
-# Start NGINX with the new configuration
-CMD ["nginx", "-g", "daemon off;"]
+# Start NGINX with the new config location
+CMD ["nginx", "-c", "/home/appuser/nginx/nginx.conf", "-g", "daemon off;"]
